# wasm-in-the-smart-building-iot-box

./: .gitignore  Cargo.toml  README.md  gitignore.txt  py_tester.py
ahu-system-air-mgmt/: README.md  main.py
ahu-system-air-mgmt/rs_ahu_air_manager/: Cargo.toml  run_wasm.py  run_wasm2.py
ahu-system-air-mgmt/rs_ahu_air_manager/src/: lib.rs
c_test_to_wasm/: README.md
c_test_to_wasm/wasi/: square.c  square.py
c_test_to_wasm/wasm/: square.c  square.js  square.py
rs-wasmtime-tutorial/: Cargo.toml  README.md  run_wasm.py
rs-wasmtime-tutorial/src/: lib.rs
rs_wasmtime_tutorial/: Cargo.toml  run_wasm.py
src/: lib.rs
vav-box-pid-setpoints-calc/: README.md  py_only_complete_sim.py
vav-box-pid-setpoints-calc/rs_vav_box_firmware/: run_wasm.py
vav-box-pid-setpoints-calc/rs_vav_box_firmware/src/: lib.rs
vav-box-pid-setpoints-calc/wat/: complete_sim.wasm  complete_sim.wat  complete_wat_file_sim.py  convert_wasm_to_hex.py  plantUml.txt  simple_sim.wat
vav_box/: README.md  complete_wat_file_sim.py  py_tester.py  simple_wat_file_sim.py  wasm_sim.py  wat_file_sim_1.py  wat_file_sim_2.py  wat_file_sim_3.py
vav_box/c/: VavBoxController.c  VavBoxController.h
vav_box/rs_vav_box_firmware/: Cargo.toml  run_wasm.py
vav_box/rs_vav_box_firmware/src/: lib.rs
vav_box/src/: control_signals.rs  lib.rs  pid.rs  sensors.rs  vav_box.rs
vav_box/wat/: complete_sim.wat  complete_wat_file_sim.py  pi_block.wat  pi_block_3.wat  simple_wat_file_sim.py
