[package]
name = "rs_ahu_air_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmtime = "20.0.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
# Optimize for size
opt-level = "s"

[build]
target = "wasm32-wasi"
